Add API key generator endpoint, DTOs, exceptions and new entities
