# src/main/java/br/com/redventures/ramen_go/controllers/BrothController.java
@@ -2,54 +2,66 @@ package br.com.redventures.ramen_go.controllers;
 
 import java.util.List;
 
+import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import br.com.redventures.ramen_go.dtos.BrothResponseDTO;
 import br.com.redventures.ramen_go.entities.BrothEntity;
+import br.com.redventures.ramen_go.exceptions.InvalidApiKeyException;
+import br.com.redventures.ramen_go.exceptions.MissingApiKeyException;
+import br.com.redventures.ramen_go.services.ApiKeyService;
 import br.com.redventures.ramen_go.services.BrothService;
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.tags.Tag;
 
 @RestController
-@RequestMapping("/v1/broths")
-@Tag(name = "default")
+@RequestMapping("/broths")
 public class BrothController {
-
-  private final String correctApiKey = "ZtVdh8XQ2U8pWI2gmZ7f796Vh8GllXoN7mr0djNf";
 
   @Autowired
   private BrothService service;
 
-  @GetMapping("/")
-  @Operation(summary = "List all available broths")
-  @ApiResponse(
-    responseCode = "200",
-    description = "A list of broths",
-    content = @Content(
-      mediaType="application/json",
-      schema=@Schema(implementation=BrothEntity.class)
-    )
-  )
-  public ResponseEntity<?> listAll(@RequestHeader("x-api-key") String apiKey) {
+  @Autowired
+  private ApiKeyService apiKeyService;
+
+  @GetMapping
+  public ResponseEntity<?> listAll(@RequestHeader(name = "x-api-key", required = false) String apiKey) {
 
     if (apiKey == null) {
-      return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("API key is missing");
+      throw new MissingApiKeyException();
     }
 
-    if (!apiKey.equals(correctApiKey)) {
-      return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Invalid API key");
+    if (!apiKeyService.validate(apiKey)) {
+      throw new InvalidApiKeyException();
     }
 
     List<BrothEntity> entities = service.listAll();
     return ResponseEntity.status(HttpStatus.OK).body(entities);
+  }
+
+  @PostMapping
+  public ResponseEntity<?> create(@RequestHeader(name = "x-api-key", required = false) String apiKey, @RequestBody BrothEntity broth) {
+
+    if (apiKey == null) {
+      throw new MissingApiKeyException();
+    }
+
+    if (!apiKeyService.validate(apiKey)) {
+      throw new InvalidApiKeyException();
+    }
+
+    BrothEntity entity = service.create(broth);
+    BrothResponseDTO responseDTO = new BrothResponseDTO();
+
+    BeanUtils.copyProperties(entity, responseDTO);
+
+    return ResponseEntity.status(HttpStatus.CREATED).body(responseDTO);
   }
 
 }
